fix(list): comma-separated-list space are visible
The space was squashed given the inline style given.

--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -2,7 +2,7 @@
 // .list-inline class.
 .list-comma-separated {
   > li:after {
-    content: ', ';
+    content: ',\00a0';
   }
 
   > li:last-child:after {
